@@ -126,10 +126,6 @@ var settings_defaults = {
 	"showallachievements": false,
 	"showachinstore": true,
 	"showcomparelinks": false,
-	"showgreenlightbanner": false,
-	"dynamicgreenlight": false,
-	"remembergreenlightfilter": false,
-	"endlessscrollinggreenlight": true,
 	"hideactivelistings": false,
 	"hidespamcomments": false,
 	"spamcommentregex": "[\\u2500-\\u25FF]",
