@@ -211,7 +211,6 @@
     "concepts": "Concepts",
     "collections": "Collections",
     "discussions": "Discussions",
-    "about_greenlight": "About Greenlight",
     "add_wishlist_note": "Add a wishlist note",
     "update_wishlist_note": "Update wishlist note",
     "add_wishlist_note_prompt": "Enter your wishlist note",
@@ -392,15 +391,10 @@
         "market_total": "Show transaction summary on Market",
         "hide_install": "Hide \"Install Steam\" button",
         "lowestprice_coupon": "Include coupon codes in price comparison",
-        "greenlight_banner": "Replace Steam Greenlight banner",
-        "dynamicgreenlight": "Use dynamic data while browsing Greenlight",
-        "remembergreenlightfilter": "Remember Greenlight filter options",
-        "endlessscrollinggreenlight": "Enable continuous scrolling of Greenlight search results",
         "general": "General",
         "market": "Market",
         "inventory": "Inventory",
         "profile": "Profile",
-        "greenlight": "Greenlight",
         "show_languagewarning": "Show warning if browsing in a language other than",
         "homepage": "Homepage",
         "homepage_default_tab": "Default homepage tab",
