@@ -430,19 +430,6 @@
 						<option value=false id="profile_link_images_none" data-locale-text="options.profile_link_images_none">None</option>
 					</select>
 				</li>
-					<li class="header" id="community_greenlight" data-locale-text="options.greenlight">Greenlight</li>
-					<li>
-						<input type="checkbox" id="showgreenlightbanner" data-setting="showgreenlightbanner"><label for="showgreenlightbanner" id="greenlight_banner_text" data-locale-text="options.greenlight_banner">Replace Steam Greenlight banner</label>
-					</li>
-					<li>
-						<input type="checkbox" id="dynamicgreenlight" data-setting="dynamicgreenlight"><label for="dynamicgreenlight" id="dynamicgreenlight_text" data-locale-text="options.dynamicgreenlight">Use dynamic data while browsing Greenlight</label>
-					</li>
-					<li>
-						<input type="checkbox" id="remembergreenlightfilter" data-setting="remembergreenlightfilter"><label for="remembergreenlightfilter" id="remembergreenlightfilter_text" data-locale-text="options.remembergreenlightfilter">Remember Greenlight filter options</label>
-					</li>
-					<li>
-						<input type="checkbox" id="endlessscrollinggreenlight" data-setting="endlessscrollinggreenlight"><label for="endlessscrollinggreenlight" id="endlessscrollinggreenlight_text" data-locale-text="options.endlessscrollinggreenlight">Enable continuous scrolling of Greenlight search results</label>
-					</li>
 					<li class="header" id="community_general" data-locale-text="options.general">General</li>
 					<li>
 						<input type="checkbox" id="showtotal" data-setting="showtotal"><label for="showtotal" id="total_spent_text" data-locale-text="options.total_spent">Show total spent on account page</label>
